# stellar-defi-vault

./: Cargo.toml  PROJECT_STATUS_REPORT.md  README.md
.github/: copilot-instructions.md
.soroban/identity/: dev-identity.toml
.soroban/network/: mainnet.toml
contracts/coffee-collateral/: Cargo.toml
contracts/coffee-collateral/src/: lib.rs
contracts/gold-vault/: Cargo.toml
contracts/gold-vault/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/usdc-vault/: Cargo.toml
contracts/usdc-vault/src/: lib.rs
contracts/yield-token/: Cargo.toml
contracts/yield-token/src/: lib.rs
scripts/: deploy.sh  setup-dev.sh
tests/: Cargo.toml
tests/src/: test_yield_token.rs
